--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -1,5 +1,6 @@
 body {
-	background: #fff;
+	background: #333;
+	color: #fff;
 }
 
 .list,
@@ -138,7 +139,7 @@ body {
 }
 
 .timeline-content {
-	background: white;
+	background: rgba(70, 69, 69, 0.771);
 	padding: 1rem;
 	border-radius: 8px;
 	-webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -158,7 +159,8 @@ body {
 	transform: translate(-50%, -50%);
 	font-size: 2rem;
 	font-weight: bold;
-	color: #333;
+	color: #bdbdbd;
+	font-family: 'Outfit';
 }
 
 .timeline-position {
