--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -115,7 +115,8 @@ body {
 	position: absolute;
 	left: 50%;
 	width: 2px;
-	height: 120%;
+	top: 0%;
+	height: 100%;
 	background: #ff5722b3;
 	-webkit-transform: translateX(-50%);
 	-ms-transform: translateX(-50%);
@@ -148,6 +149,7 @@ body {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+	color: #101010;
 }
 
 .timeline-year {
