--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -173,19 +173,19 @@ body {
 	padding: 2rem;
 }
 .timeline-dot {
-	width: 8px;
-	height: 8px;
+	width: 17px;
+	height: 17px;
 	background-color: #ff5722b3; /* 예쁜 보라색 */
 	border-radius: 50%;
 	position: absolute;
-	top: 50%;
+	top: -2%;
 }
 
 .timeline-item.right .timeline-dot {
-	left: 0;
+	left: -9px;
 }
 .timeline-item.left .timeline-dot {
-	right: 0;
+	right: -9px;
 }
 
 .timeline-position {
