경험: 색상 수정

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -175,7 +175,7 @@ body {
 .timeline-dot {
 	width: 17px;
 	height: 17px;
-	background-color: #ff5722b3; /* 예쁜 보라색 */
+	background-color: #ff5722; /* 예쁜 보라색 */
 	border-radius: 50%;
 	position: absolute;
 	top: -2%;
