--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -175,12 +175,42 @@ body {
 .timeline-dot {
 	width: 17px;
 	height: 17px;
-	background-color: #ff5722; /* 예쁜 보라색 */
+	background-color: #ff5722;
 	border-radius: 50%;
 	position: absolute;
 	top: -2%;
 }
+.timeline-dot::before {
+	content: '';
+	position: absolute;
+	display: block;
+	width: 19px;
+	height: 19px;
+	background: #ff5722;
+	z-index: -1;
+	border-radius: 50%;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	opacity: 0;
+}
 
+/* 호버 시 파동 애니메이션 작동 */
+.timeline-dot:hover::before {
+	animation: wave 0.6s ease-out forwards;
+}
+
+/* 파동 애니메이션 정의 */
+@keyframes wave {
+	0% {
+		transform: translate(-50%, -50%) scale(1);
+		opacity: 0.6;
+	}
+	100% {
+		transform: translate(-50%, -50%) scale(2.5);
+		opacity: 0;
+	}
+}
 .timeline-item.right .timeline-dot {
 	left: -9px;
 }
