--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -237,14 +237,24 @@ input[type='search']::-webkit-search-cancel-button {
 
 
 @media (max-width: 768px) {
+
+	.site-header {
+		box-sizing: border-box;
+	}
+
+	.nav {
+		margin: 0;
+	}
+
 	.nav .nav-links {
 		display: none;
 		flex-direction: column;
 		position: absolute;
-		right: 10px;
-		top: 60px;
+		left: 0;
+		top: 0p;
 		background: white;
-		width: 200px;
+		width: 100%;
+		height: 100vh;
 		padding: 1rem;
 		border: 1px solid #ddd;
 	}
@@ -259,6 +269,7 @@ input[type='search']::-webkit-search-cancel-button {
 		background: none;
 		border: none;
 		cursor: pointer;
+		float: right;
 	}
 
 	.nav-links {
