--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -9,25 +9,23 @@
 }
 
 .nav {
-	margin: 0 60px;
+	margin: 0 auto;
+	max-width: 1800px;
 	position: relative;
-}
-
-.nav .nav-links {
-	list-style: none;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	gap: 20px;
-	margin: 0;
-	padding: 0;
-	-webkit-box-pack: start;
-	-ms-flex-pack: start;
-	justify-content: flex-start;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
+	justify-content: space-between;
 	align-items: center;
 }
+
+
+.nav .nav-links {
+	display: flex;
+	gap: 20px;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
 
 .hamburger {
 	display: none;
@@ -44,37 +42,52 @@
 	text-decoration: underline;
 }
 
-/* 드롭다운 메뉴 */
-.dropdown details {
-	position: relative;
-	display: inline-block;
+.mobile-menu {
+	display: none;
 }
 
-.dropdown summary {
-	cursor: pointer;
-	list-style: none;
-}
-
-.dropdown ul {
-	position: absolute;
-	top: 100%;
-	left: 0;
+.mobile-menu.open {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	background: #fff;
-	border: 1px solid #ccc;
-	padding: 0.5rem;
-	z-index: 100;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: 999;
+	padding-top: 80px;
+}
+
+.mobile-menu-links {
 	list-style: none;
-}
-
-.dropdown ul li {
+	padding: 0;
 	margin: 0;
+	text-align: center;
 }
 
-.dropdown ul a {
-	text-decoration: none;
+.mobile-menu-links li {
+	margin: 1rem 0;
+}
+
+.mobile-menu-links a {
+	font-size: 1.2rem;
+	font-weight: bold;
 	color: #000;
-	display: block;
-	padding: 0.25rem 0;
+	text-decoration: none;
+}
+
+/* 닫기 버튼 */
+.close-btn {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	font-size: 28px;
+	background: none;
+	border: none;
+	cursor: pointer;
 }
 
 .search-bar {
@@ -240,27 +253,17 @@ input[type='search']::-webkit-search-cancel-button {
 
 	.site-header {
 		box-sizing: border-box;
+		padding: 0;
+		;
 	}
 
 	.nav {
 		margin: 0;
 	}
 
+
 	.nav .nav-links {
 		display: none;
-		flex-direction: column;
-		position: absolute;
-		left: 0;
-		top: 0p;
-		background: white;
-		width: 100%;
-		height: 100vh;
-		padding: 1rem;
-		border: 1px solid #ddd;
-	}
-
-	.nav .nav-links.open {
-		display: flex;
 	}
 
 	.hamburger {
@@ -269,10 +272,16 @@ input[type='search']::-webkit-search-cancel-button {
 		background: none;
 		border: none;
 		cursor: pointer;
-		float: right;
+		margin-left: auto;
+		z-index: 1001;
+	}
+
+	.search-bar {
+		display: none;
 	}
 
 	.nav-links {
 		transition: all 0.3s ease-in-out;
 	}
+
 }
