--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -222,6 +222,9 @@ input[type='search']::-webkit-search-cancel-button {
 	z-index: 999;
 }
 
+
+
+
 .clear-btn:hover {
 	color: #333;
 }
@@ -284,6 +287,51 @@ input[type='search']::-webkit-search-cancel-button {
 
 	.nav-links {
 		transition: all 0.3s ease-in-out;
+	}
+
+	.hamburger_mark {
+		width: 30px;
+		height: 30px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.hamburger_mark span {
+		display: block;
+		width: 100%;
+		height: 1px;
+		background: #333;
+	}
+
+	.close-icon {
+		position: relative;
+		display: inline-block;
+		width: 30px;
+		height: 30px;
+	}
+
+	.close-icon::before,
+	.close-icon::after {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 30px;
+		height: 1px;
+		background-color: #333;
+		transform-origin: center;
+	}
+
+
+	.close-icon::before {
+		transform: translate(-50%, -50%) rotate(45deg);
+	}
+
+
+	.close-icon::after {
+		transform: translate(-50%, -50%) rotate(-45deg);
 	}
 
 }
