--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -44,23 +44,28 @@
 }
 
 .mobile-menu {
-	display: none;
+	opacity: 0;
+	visibility: hidden;
+	transform: translateX(-100%);
+	transition: all 0.4s ease;
 }
 
 .mobile-menu.open {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background: #fff;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100vh;
+	background: #fff;
 	z-index: 999;
 	padding-top: 80px;
-	transition: all 0.3s ease-in-out;
+	transform: translateX(0);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 1;
+	visibility: visible;
 }
 
 .mobile-menu-links {
@@ -265,6 +270,7 @@ input[type='search']::-webkit-search-cancel-button {
 	.nav {
 		margin: 0;
 		max-width: 100%;
+		justify-content: flex-end;
 	}
 
 	.nav .nav-links {
@@ -279,22 +285,20 @@ input[type='search']::-webkit-search-cancel-button {
 		cursor: pointer;
 		margin-left: auto;
 		z-index: 998;
+		margin: 10px;
 	}
 
 	.search-bar {
 		display: none;
 	}
 
-	.nav-links {
-		transition: all 0.3s ease-in-out;
-	}
 
 	.hamburger_mark {
-		width: 30px;
-		height: 30px;
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
+		width: 24px;
+		height: 24px;
+		justify-content: space-around;
 		align-items: center;
 	}
 
