--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -6,6 +6,7 @@
 	top: 0;
 	left: 0;
 	z-index: 1000;
+	height: 60px;
 }
 
 .nav {
@@ -15,6 +16,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	height: 60px;
 }
 
 
