--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -9,13 +9,14 @@
 }
 
 .nav {
-	margin: 60px;
+	margin: 0 60px;
 	max-width: 1800px;
 	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	height: 60px;
+	box-sizing: border-box;
 }
 
 
