--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -288,6 +288,7 @@ input[type='search']::-webkit-search-cancel-button {
 		margin-left: auto;
 		z-index: 998;
 		margin: 10px;
+		position: absolute;
 	}
 
 	.search-bar {
