메뉴 투명화

--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -65,10 +65,8 @@
 }
 
 .mobile-menu.open {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	opacity: 1;
+	visibility: visible;
 }
 
 .mobile-menu-links {
