--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -66,6 +66,7 @@
 
 .mobile-menu.open {
 	transform: translateX(0);
+	transition: transform 0.4s ease-in-out;
 	opacity: 1;
 	visibility: visible;
 }
