버블차트 버블 색상 변경

--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -162,7 +162,7 @@
 .search-btn {
 	height: 34px;
 	width: 34px;
-	background: #ff5722b3;
+	background: #ff5722;
 	color: white;
 	border: none;
 	border-radius: 50%;
