--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -16,7 +16,6 @@
 
 .section H1 {
 	font-family: 'MonumentExtended';
-
 }
 
 .two {
@@ -109,7 +108,6 @@
 	white-space: pre;
 }
 
-
 .text--folding .char {
 	opacity: 0;
 	-webkit-transform: translateY(100%);
@@ -136,7 +134,6 @@
 		transform: translateY(0);
 	}
 }
-
 
 .text--bubbling .char {
 	opacity: 0;
@@ -191,7 +188,6 @@
 	}
 }
 
-
 .text--swinging .char {
 	opacity: 0;
 	-webkit-transform: rotateZ(-90deg);
@@ -218,7 +214,6 @@
 		transform: rotateZ(0deg);
 	}
 }
-
 
 /*************인터레스트 버블 존***************/
 .full-container {
@@ -282,7 +277,7 @@
 	right: 0;
 	width: 500px;
 	height: 100%;
-	background: #fff;
+	background: #333;
 	-webkit-transform: translateX(100%);
 	-ms-transform: translateX(100%);
 	transform: translateX(100%);
@@ -295,7 +290,7 @@
 	-webkit-box-shadow: -4px 0 20px rgba(0, 0, 0, 0.15);
 	box-shadow: -4px 0 20px rgba(0, 0, 0, 0.15);
 	z-index: 10;
-	color: #333;
+	color: #fff;
 }
 
 .about_keyword.show {
@@ -344,13 +339,13 @@
 }
 
 .custom-close-btn:hover {
-	background: rgba(255, 255, 255, 0.1);
+	background: rgba(255, 255, 255, 0.903);
 }
 
 .close-icon {
 	width: 24px;
 	height: 24px;
-	stroke: #333;
+	stroke: #fff;
 	stroke-width: 2;
 	stroke-linecap: round;
 	-webkit-transition: stroke 0.3s ease, -webkit-transform 0.3s ease;
@@ -366,8 +361,6 @@
 	transform: rotate(90deg);
 	stroke: #ff4d4f;
 }
-
-
 
 /*************지도***************/
 .travel-map-wrapper {
