--- a/client/src/assets/css/welcome.css
+++ b/client/src/assets/css/welcome.css
@@ -1,80 +1,80 @@
 html,
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
 }
 
 .one {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-color: #fff;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    overflow: hidden;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	background-color: #333;
+	color: #333;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	overflow: hidden;
 }
 
 .container {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    max-width: 1800px;
-    max-height: 740px;
-    min-width: 1800px;
-    min-height: 740px;
-    background: #fff;
-    cursor: pointer;
-    visibility: hidden;
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	max-width: 1800px;
+	max-height: 740px;
+	min-width: 1800px;
+	min-height: 740px;
+	background: #333;
+	cursor: pointer;
+	visibility: hidden;
 }
 
 .container video {
-    -o-object-fit: cover;
-    object-fit: cover;
+	-o-object-fit: cover;
+	object-fit: cover;
 }
 
 .container__base {
-    position: absolute;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    background: #fff;
+	position: absolute;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	background: #333;
 }
 
 .moon {
-    position: relative;
-    z-index: 2;
-    width: 1700px;
-    height: 740px;
+	position: relative;
+	z-index: 2;
+	width: 1700px;
+	height: 740px;
 }
 
 .moon__svg {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .moon__txt {
-    font-family: 'MonumentExtended';
-    font-size: 103px;
-    line-height: 1;
-    fill: black;
-    letter-spacing: 2.1px;
+	font-family: 'MonumentExtended';
+	font-size: 103px;
+	line-height: 1;
+	fill: black;
+	letter-spacing: 2.1px;
 }
 
 .moon__txt-overlay {
-    fill: rgba(0, 0, 0, 0.4);
+	fill: rgba(255, 255, 255, 0.405);
 }
