--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -227,7 +227,7 @@
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	/* 가운데 정렬 */
+	margin-top: 120px;
 }
 
 .interest-section {
@@ -275,22 +275,16 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 500px;
-	height: 100%;
+	width: 700px;
+	height: 600px;
 	background: #333;
-	-webkit-transform: translateX(100%);
-	-ms-transform: translateX(100%);
-	transform: translateX(100%);
+	transform: translate(100%);
 	opacity: 0;
-	-webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
-	transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
-	-o-transition: transform 0.3s ease, opacity 0.3s ease;
 	transition: transform 0.3s ease, opacity 0.3s ease;
-	transition: transform 0.3s ease, opacity 0.3s ease, -webkit-transform 0.3s ease;
-	-webkit-box-shadow: -4px 0 20px rgba(0, 0, 0, 0.15);
-	box-shadow: -4px 0 20px rgba(0, 0, 0, 0.15);
+	box-shadow: -4px 0 20px #000000a6;
 	z-index: 10;
 	color: #fff;
+	border-radius: 10px 0 0 10px;
 }
 
 .about_keyword.show {
@@ -301,14 +295,15 @@
 }
 
 .custom-description h2 {
-	margin-bottom: 1rem;
 	font-size: 1.5rem;
 }
 
 .custom-description img {
 	width: 100%;
-	border-radius: 10px;
+	border-radius: 0;
 	margin-bottom: 1rem;
+	height: 400px;
+	margin-top: 4px;
 }
 
 .custom-description p {
@@ -339,7 +334,7 @@
 }
 
 .custom-close-btn:hover {
-	background: rgba(255, 255, 255, 0.903);
+	background: #333;
 }
 
 .close-icon {
