--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -630,3 +630,19 @@
 .circle-marker.hidden {
 	display: none;
 }
+.map-popup .custom-close-btn {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	padding: 5px;
+	z-index: 10;
+}
+
+.map-popup .close-icon {
+	width: 20px;
+	height: 20px;
+	stroke: #333;
+}
