로딩버튼 위치 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,11 @@ button {
 .loading-container {
 	text-align: center;
 	padding: 40px 0;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 30px;
 }
 
 .spinner {
