비디오 재생 관련

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -95,6 +95,7 @@ body {
 	-webkit-transform: scale(1.05);
 	-ms-transform: scale(1.05);
 	transform: scale(1.05);
+	pointer-events: auto;
 }
 
 .project-card:hover .thumbnail-img {
