경력사항 애니메이션션

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -247,6 +247,19 @@ body {
 	object-fit: contain;
 }
 
+@keyframes fadeInUp {
+	from {
+		transform: translateY(20px);
+		opacity: 0;
+	}
+
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+
 @media (max-width: 768px) {
 
 	.timeline-item,
