--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -8,6 +8,23 @@
 	height: 60px;
 }
 
+.site-header .logo {
+	color: #fff;
+	text-decoration: none;
+	font-size: 1.5rem;
+	font-weight: bold;
+	padding: 0 20px;
+	display: flex;
+	align-items: center;
+	height: 100%;
+}
+
+.site-header .logo img {
+	height: 40px;
+	width: auto;
+	margin-right: 10px;
+}
+
 .nav {
 	margin: 0 60px;
 	max-width: 1800px;
