로딩 텍스트 중앙 정렬

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,13 @@ button {
 	width: 30px;
 }
 
+.loading-container p {
+	font-size: 1.2rem;
+	color: #fff;
+	margin-top: 10px;
+	text-align: center;
+}
+
 .spinner {
 	margin: 16px auto;
 	width: 40px;
