--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@ button {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	width: 30px;
+	width: 50px;
 }
 
 .loading-container p {
@@ -31,6 +31,7 @@ button {
 	border-top: 5px solid #ff5722;
 	border-radius: 50%;
 	animation: spin 0.6s linear infinite;
+	text-align: center;
 }
 
 @keyframes spin {
