아이콘 추가

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -35,6 +35,10 @@ body {
 	margin-bottom: 2rem;
 }
 
+.project-card strong {
+	color: #fff;
+}
+
 .media-container {
 	position: relative;
 	width: 480px;
