프로젝트 쪽 전체적인 비율 조정정

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -5,7 +5,7 @@ body {
 
 .list,
 .ex_wrap {
-	padding: 120px 16px 100px 16px;
+	padding: 120px 0 100px;
 	margin: 0 60px;
 	min-height: 680px;
 	display: block;
@@ -15,7 +15,7 @@ body {
 	display: -ms-grid;
 	display: grid;
 	-ms-grid-columns: (1fr 1fr 1fr);
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(3, 510px);
 	row-gap: 2rem;
 }
 
@@ -41,8 +41,9 @@ body {
 
 .media-container {
 	position: relative;
-	width: 480px;
-	height: 270px;
+	width: 510px;
+	padding-top: 56.25%;
+	position: relative;
 	border-radius: 12px;
 	overflow: hidden;
 	-webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
@@ -52,6 +53,7 @@ body {
 	-o-transition: box-shadow 0.3s ease;
 	transition: box-shadow 0.3s ease;
 	transition: box-shadow 0.3s ease, -webkit-box-shadow 0.3s ease;
+	margin-bottom: 1rem;
 }
 
 .project-card:hover .media-container {
@@ -69,7 +71,9 @@ body {
 	transition: opacity 0.3s ease;
 	border-radius: 12px;
 	z-index: 1;
-	position: relative;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .hover-video {
