프로젝트 단: 전체적인 간격 수정

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -17,6 +17,7 @@ body {
 	-ms-grid-columns: (1fr 1fr 1fr);
 	grid-template-columns: repeat(3, 510px);
 	row-gap: 2rem;
+	justify-content: space-around;
 }
 
 .list ul li ul {
