--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -45,7 +45,6 @@ body {
 	max-width: 510px;
 	width: 100%;
 	height: 0;
-	/* 16:9 Aspect Ratio */
 	padding-top: 56.25%;
 	aspect-ratio: 16 / 9;
 	position: relative;
@@ -78,6 +77,7 @@ body {
 	top: 0;
 	left: 0;
 	overflow: hidden;
+	position: absolute;
 }
 
 .hover-video {
