디버깅 소스값 수정

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -133,6 +133,9 @@ body {
 	}
 }
 
+@media (max-width: 1400px) {
+}
+
 /***********************경력 사항***************************/
 
 .timeline-container {
